--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                                         <li><a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about.html">ABOUT</a></li>
+                                        <li><a href="service.html">services</a></li>
                                         <li><a href="projects-one.html">PROJECTS</a>
                                         </li>
                                         <li><a href="contact.html">contact</a></li>
