--- a/single-project.html
+++ b/single-project.html
@@ -101,10 +101,10 @@
                                         <li><a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about.html">ABOUT</a></li>
+                                        <li><a href="service.html">SERVICES</a></li>
                                         <li><a href="projects-one.html">PROJECTS</a>
                                         </li>
-                                        <li><a href="blog.html">blog</a>
-                                        </li>
+                                        
                                         <li><a href="contact.html">contact</a></li>
                                     </ul>
                                 </nav>
