--- a/about.html
+++ b/about.html
@@ -98,6 +98,7 @@
                                         <li><a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about.html">ABOUT</a></li>
+                                        <li><a href="service.html">SERVICES</a></li>
                                         <li><a href="projects-one.html">PROJECTS</a>
                                         </li>
                                         <li><a href="contact.html">contact</a></li>
