--- a/service.html
+++ b/service.html
@@ -211,17 +211,17 @@
                         <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
                             <div class="service foo">
                                 <div class="service__thumb">
-                                    <a href="single-service.html">
+                                    <a href="INTERIORwALLpAINT.html">
                                         <img src="images/services/serve/Interior Wall Paints.png" alt="service images">
                                     </a>
                                     <div class="service__hover">
                                         <div class="service__action">
-                                            <a href="single-service.html">DETAILS</a>
+                                            <a href="INTERIORwALLpAINT.html">DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="service__details">
-                                    <h2><a href="single-service.html">Interior Wall Paints</a></h2>
+                                    <h2><a href="INTERIORwALLpAINT.html">Interior Wall Paints</a></h2>
                                 </div>
                             </div>
                         </div>
@@ -230,17 +230,17 @@
                         <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
                             <div class="service foo">
                                 <div class="service__thumb">
-                                    <a href="single-service.html">
+                                    <a href="MetalEnamelPaints.html">
                                         <img src="images/services/serve/Metal Enamel Paints.png" alt="service images">
                                     </a>
                                     <div class="service__hover">
                                         <div class="service__action">
-                                            <a href="single-service.html">DETAILS</a>
+                                            <a href="MetalEnamelPaints.html">DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="service__details">
-                                    <h2><a href="single-service.html">Metal Enamel Paints</a></h2>
+                                    <h2><a href="MetalEnamelPaints.html">Metal Enamel Paints</a></h2>
                                 </div>
                             </div>
                         </div>
@@ -249,17 +249,17 @@
                         <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
                             <div class="service foo">
                                 <div class="service__thumb">
-                                    <a href="single-service.html">
+                                    <a href="WATERPROOFING.html">
                                         <img src="images/services/serve/waterproofing (2).png" alt="service images">
                                     </a>
                                     <div class="service__hover">
                                         <div class="service__action">
-                                            <a href="single-service.html">DETAILS</a>
+                                            <a href="WATERPROOFING.html">DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="service__details">
-                                    <h2><a href="single-service.html">WATERPROOFING</a></h2>
+                                    <h2><a href="WATERPROOFING.html">WATERPROOFING</a></h2>
                                 </div>
                             </div>
                         </div>
@@ -268,17 +268,17 @@
                         <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
                             <div class="service foo">
                                 <div class="service__thumb">
-                                    <a href="single-service.html">
+                                    <a href="INTERIOR&TEXTURE.html">
                                         <img src="images/services/serve/INTERIOR & TEXTURE.png" alt="service images">
                                     </a>
                                     <div class="service__hover">
                                         <div class="service__action">
-                                            <a href="single-service.html">DETAILS</a>
+                                            <a href="INTERIOR&TEXTURE.html">DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="service__details">
-                                    <h2><a href="single-service.html">INTERIOR & TEXTURE</a></h2>
+                                    <h2><a href="INTERIOR&TEXTURE.html">INTERIOR & TEXTURE</a></h2>
                                 </div>
                             </div>
                         </div>
@@ -287,17 +287,17 @@
                         <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
                             <div class="service foo">
                                 <div class="service__thumb">
-                                    <a href="single-service.html">
+                                    <a href="PaintAncillary.html">
                                         <img src="images/services/serve/Paint Ancillary.png" alt="service images">
                                     </a>
                                     <div class="service__hover">
                                         <div class="service__action">
-                                            <a href="single-service.html">DETAILS</a>
+                                            <a href="PaintAncillary.html">DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="service__details">
-                                    <h2><a href="single-service.html">Paint Ancillary</a></h2>
+                                    <h2><a href="PaintAncillary.html">Paint Ancillary</a></h2>
                                 </div>
                             </div>
                         </div>
@@ -306,17 +306,17 @@
                         <div class="col-md-3 col-lg-3 hidden-sm col-xs-12">
                             <div class="service foo">
                                 <div class="service__thumb">
-                                    <a href="single-service.html">
+                                    <a href="InteriorDesign.html">
                                         <img src="images/service/7.jpg" alt="service images">
                                     </a>
                                     <div class="service__hover">
                                         <div class="service__action">
-                                            <a href="single-service.html">DETAILS</a>
+                                            <a href="InteriorDesign.html">DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="service__details">
-                                    <h2><a href="single-service.html">INTERIOR DESIGN</a></h2>
+                                    <h2><a href="InteriorDesign.html">INTERIOR DESIGN</a></h2>
                                 </div>
                             </div>
                         </div>
@@ -325,17 +325,17 @@
                         <div class="col-md-3 col-lg-3 hidden-sm col-xs-12">
                             <div class="service foo">
                                 <div class="service__thumb">
-                                    <a href="single-service.html">
+                                    <a href="WoodCoatings.html">
                                         <img src="images/services/serve/wood coating.png" alt="service images">
                                     </a>
                                     <div class="service__hover">
                                         <div class="service__action">
-                                            <a href="single-service.html">DETAILS</a>
+                                            <a href="WoodCoatings.html">DETAILS</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="service__details">
-                                    <h2><a href="single-service.html">Wood Coatings</a></h2>
+                                    <h2><a href="WoodCoatings.html">Wood Coatings</a></h2>
                                 </div>
                             </div>
                         </div>
