--- a/service.html
+++ b/service.html
@@ -250,7 +250,7 @@
                             <div class="service foo">
                                 <div class="service__thumb">
                                     <a href="WATERPROOFING.html">
-                                        <img src="images/services/serve/waterproofing (2).png" alt="service images">
+                                        <img src="images/services/serve/Paint Ancillary.png" alt="service images">
                                     </a>
                                     <div class="service__hover">
                                         <div class="service__action">
