--- a/WoodCoatings.html
+++ b/WoodCoatings.html
@@ -191,17 +191,17 @@
                                         </li>
                                         <li role="presentation" class="pot-small-img img-tab-2">
                                             <a href="#img-tab-2" role="tab" data-toggle="tab">
-                                                <img src="images/service/small-img/2.jpg" alt="small-image">
+                                                <img src="images/services/services_details/wood coating/2 (6).png" alt="small-image">
                                             </a>
                                         </li>
                                         <li role="presentation" class="pot-small-img img-tab-3 xmt-20">
                                             <a href="#img-tab-3" role="tab" data-toggle="tab">
-                                                <img src="images/service/small-img/3.jpg" alt="small-image">
+                                                <img src="images/services/services_details/wood coating/3 (5).png" alt="small-image">
                                             </a>
                                         </li>
                                         <li role="presentation" class="pot-small-img img-tab-4 xmt-20">
                                             <a href="#img-tab-4" role="tab" data-toggle="tab">
-                                                <img src="images/service/small-img/4.jpg" alt="small-image">
+                                                <img src="images/services/services_details/wood coating/4 (5).png" alt="small-image">
                                             </a>
                                         </li>
                                     </ul>
