--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Service || Simply Construction HTML5 Template</title>
+    <title>P&R General Contractor</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -145,7 +145,7 @@
                             </div>
                             <div class="offer__details">
                                 <h2><a href="#">TOP RATED</a></h2>
-                                <p>On the other hand, we denounce with righteous indignation and dislike men who are</p>
+                                <p> the other hand, we denounce with righteous indignation and dislike men who are</p>
                             </div>
                         </div>
                     </div>
