--- a/index.html
+++ b/index.html
@@ -375,17 +375,17 @@
                                 <div class="col-md-4 col-lg-4 col-sm-4 col-xs-12">
                                     <div class="service">
                                         <div class="service__thumb">
-                                            <a href="single-service.html">
+                                            <a href="PaintAncillary.html">
                                                 <img src="images/services/ancliary paint.png" alt="service images">
                                             </a>
                                             <div class="service__hover">
                                                 <div class="service__action">
-                                                    <a href="single-service.html">DETAILS</a>
+                                                    <a href="PaintAncillary.html">DETAILS</a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="service__details">
-                                            <h2><a href="single-service.html">Ancliary paint</a></h2>
+                                            <h2><a href="PaintAncillary.html">Ancliary paint</a></h2>
                                         </div>
                                     </div>
                                 </div>
@@ -394,17 +394,17 @@
                                 <div class="col-md-4 col-lg-4 col-sm-4 col-xs-12">
                                     <div class="service">
                                         <div class="service__thumb">
-                                            <a href="single-service.html">
+                                            <a href="INTERIORwALLpAINT.html">
                                                 <img src="images/services/Interior Wall Paints.jpg" alt="service images">
                                             </a>
                                             <div class="service__hover">
                                                 <div class="service__action">
-                                                    <a href="single-service.html">DETAILS</a>
+                                                    <a href="INTERIORwALLpAINT.html">DETAILS</a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="service__details">
-                                            <h2><a href="single-service.html"> Interior Wall paint</a></h2>
+                                            <h2><a href="INTERIORwALLpAINT.html"> Interior Wall paint</a></h2>
                                         </div>
                                     </div>
                                 </div>
@@ -413,17 +413,17 @@
                                 <div class="col-md-4 col-lg-4 col-sm-4 col-xs-12">
                                     <div class="service">
                                         <div class="service__thumb">
-                                            <a href="single-service.html">
+                                            <a href="WATERPROOFING.html">
                                                 <img src="images/services/WATERPROOFING.png" alt="service images">
                                             </a>
                                             <div class="service__hover">
                                                 <div class="service__action">
-                                                    <a href="single-service.html">DETAILS</a>
+                                                    <a href="WATERPROOFING.html">DETAILS</a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="service__details">
-                                            <h2><a href="single-service.html">Water Proofing</a></h2>
+                                            <h2><a href="WATERPROOFING.html">Water Proofing</a></h2>
                                         </div>
                                     </div>
                                 </div>
