--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="row">
                             <div class="col-md-12 col-lg-12">
                                 <div class="slider__inner">
-                                    <h4>P&R Constructions</h4>
+                                    <h4>P&R General Contractor</h4>
                                     <h1>WE BUILD THE TRUST</h1>
                                     <p>A contractor is a professional or an entity that provides a specific set of
                                         services to clients &
@@ -148,7 +148,7 @@
                         <div class="row">
                             <div class="col-md-12 col-lg-12">
                                 <div class="slider__inner">
-                                    <h4>P&R Constructions</h4>
+                                    <h4>P&R General Contractor</h4>
                                     <h1>WE BUILD THE TRUST</h1>
                                     <p>A contractor is a professional or an entity that provides a specific set of
                                         services to clients &
@@ -180,8 +180,7 @@
                             </div>
                             <div class="offer__details">
                                 <h2><a href="#">TOP RATED</a></h2>
-                                <p>On the other hand, we denounce with righteous indignation and dislike men who are so
-                                    beguiled demoralized</p>
+                                <p>We are Top Rated General Contractors Because we Build Trust.</p>
                             </div>
                         </div>
                     </div>
@@ -192,8 +191,7 @@
                             </div>
                             <div class="offer__details">
                                 <h2><a href="#">BEST QUALITY</a></h2>
-                                <p>On the other hand, we denounce with righteous indignation and dislike men who are so
-                                    beguiled demoralized</p>
+                                <p>We have Build and maintain High Quality Contruction and Infrastructure.</p>
                             </div>
                         </div>
                     </div>
@@ -204,8 +202,7 @@
                             </div>
                             <div class="offer__details">
                                 <h2><a href="#">LOW COST</a></h2>
-                                <p>On the other hand, we denounce with righteous indignation and dislike men who are so
-                                    beguiled demoralized</p>
+                                <p>We are Develop and Maintain High Quality and Top rated Infrastructure in The Budget Friendly Cost.</p>
                             </div>
                         </div>
                     </div>
@@ -364,9 +361,7 @@
                                 <div class="col-xs-12">
                                     <div class="section__title text-left">
                                         <h2 class="title__line">OUR <span class="text--theme">SERVICES</span></h2>
-                                        <p>On the other hand, we denounce with righteous indignation and dislike men who
-                                            are so beguiled and demoralized by the charms of pleasure of the moment, so
-                                            blinded by desire, that they cannot foresee the pain and trouble</p>
+                                        <p>One Solution to all Problems P & R Genral Contractor </p>
                                     </div>
                                 </div>
                             </div>
@@ -424,7 +419,7 @@
                                         </div>
                                         <div class="service__details">
                                             <h2><a href="WATERPROOFING.html">Water Proofing</a></h2>
-                                        </div>
+                                        </div>-
                                     </div>
                                 </div>
                                 <!-- End Single Service -->
