--- a/index.html
+++ b/index.html
@@ -804,8 +804,7 @@
                         <div class="reguest__quote">
                             <div class="section__title text-left">
                                 <h2 class="title__line">REQUEST A <span class="text--theme">QUOTE</span></h2>
-                                <p>On the other hand, we denounce with righteous indignation and dislike men who are so
-                                    beguiled and demoralized by the charms of pleasur</p>
+                                <p>Request a quote today to take the first step toward your dream project. Our team will provide a detailed and competitive estimate tailored to your needs. We ensure transparency and clarity in all our pricing. Let us help you turn your vision into reality with expert guidance and unbeatable value.</p>
                             </div>
                             <form id="contact-form"
                                 action="https://d29u17ylf1ylz9.cloudfront.net/simply-construction/mail-faq.php"
