--- a/single-service.html
+++ b/single-service.html
@@ -414,16 +414,16 @@
                                         <h2 class="ft__title">INQUARY</h2>
                                         <div class="footer__link">
                                             <ul class="ft__menu">
-                                                <li><a href="#">EXTERIOR WALL PAINTS</a></li>
-                                                <li><a href="#">INTERIOR WALL PAINTS</a></li>
-                                                <li><a href="#">METAL ENAMEL PAINTS</a></li>
-                                                <li><a href="#">WATERPROOFING</a></li>
+                                                <li><a href="single-service.html">EXTERIOR WALL PAINTS</a></li>
+                                                <li><a href="INTERIORwALLpAINT.html">INTERIOR WALL PAINTS</a></li>
+                                                <li><a href="MetalEnamelPaints.html">METAL ENAMEL PAINTS</a></li>
+                                                <li><a href="WATERPROOFING.html">WATERPROOFING</a></li>
                                             </ul>
                                             <ul class="ft__menu">
-                                                <li><a href="#">INTERIOR & TEXTURE</a></li>
-                                                <li><a href="#">PAINT ANCILLARY</a></li>
-                                                <li><a href="#">INTERIOR DESIGN</a></li>
-                                                <li><a href="#">WOOD COATINGS</a></li>
+                                                <li><a href="INTERIOR&TEXTURE.html">INTERIOR & TEXTURE</a></li>
+                                                <li><a href="PaintAncillary.html">PAINT ANCILLARY</a></li>
+                                                <li><a href="InteriorDesign.html">INTERIOR DESIGN</a></li>
+                                                <li><a href="WoodCoatings.html">WOOD COATINGS</a></li>
                                             </ul>
                                         </div>
                                     </div>
