--- a/about.html
+++ b/about.html
@@ -395,7 +395,10 @@
                         <div class="reguest__quote">
                             <div class="section__title text-left">
                                 <h2 class="title__line">REQUEST A <span class="text--theme">QUOTE</span></h2>
-                                <p>Request a quote today to take the first step toward your dream project. Our team will provide a detailed and competitive estimate tailored to your needs. We ensure transparency and clarity in all our pricing. Let us help you turn your vision into reality with expert guidance and unbeatable value.</p>
+                                <p>Request a quote today to take the first step toward your dream project. Our team will
+                                    provide a detailed and competitive estimate tailored to your needs. We ensure
+                                    transparency and clarity in all our pricing. Let us help you turn your vision into
+                                    reality with expert guidance and unbeatable value.</p>
                             </div>
                             <form id="contact-form"
                                 action="https://d29u17ylf1ylz9.cloudfront.net/simply-construction/mail-faq.php"
@@ -531,11 +534,13 @@
                             <!-- Start Single Address -->
                             <div class="ht__address__inner">
                                 <div class="ht__address__icon map-pin">
-                                    <i class="zmdi zmdi-pin"></i>
+                                    <a
+                                        href="https://www.google.com/maps/place/Fortune+Soumya+Heritage+Rd,+Misrod,+Bhopal,+Madhya+Pradesh+462047,+India/@23.146254,77.477892,16z/data=!4m6!3m5!1s0x397c46a37bbcd50d:0x2b0db9b814160320!8m2!3d23.1462544!4d77.4778924!16s%2Fg%2F11r0_sy61f?hl=en&entry=ttu">
+                                        <i class="zmdi zmdi-pin"></i></a>
                                 </div>
                                 <div class="ht__address__details">
-                                    <p>Address: House No -03, Duplex Fortune , Soumya Heritage ,<br> Near IPS School,
-                                        Hosangabad Road , Bhopal ( Mp) </p>
+                                    <a href="https://www.google.com/maps/place/Fortune+Soumya+Heritage+Rd,+Misrod,+Bhopal,+Madhya+Pradesh+462047,+India/@23.146254,77.477892,16z/data=!4m6!3m5!1s0x397c46a37bbcd50d:0x2b0db9b814160320!8m2!3d23.1462544!4d77.4778924!16s%2Fg%2F11r0_sy61f?hl=en&entry=ttu"><p>Address: House No -03, Duplex Fortune , Soumya Heritage ,<br> Near IPS School,
+                                        Hosangabad Road , Bhopal ( Mp) </p></a>
                                 </div>
                             </div>
                             <!-- End Single Address -->
@@ -633,16 +638,16 @@
                                         <h2 class="ft__title">INQUARY</h2>
                                         <div class="footer__link">
                                             <ul class="ft__menu">
-                                                <li><a href="#">EXTERIOR WALL PAINTS</a></li>
-                                                <li><a href="#">INTERIOR WALL PAINTS</a></li>
-                                                <li><a href="#">METAL ENAMEL PAINTS</a></li>
-                                                <li><a href="#">WATERPROOFING</a></li>
+                                                <li><a href="single-service.html">EXTERIOR WALL PAINTS</a></li>
+                                                <li><a href="INTERIORwALLpAINT.html">INTERIOR WALL PAINTS</a></li>
+                                                <li><a href="MetalEnamelPaints.html">METAL ENAMEL PAINTS</a></li>
+                                                <li><a href="WATERPROOFING.html">WATERPROOFING</a></li>
                                             </ul>
                                             <ul class="ft__menu">
-                                                <li><a href="#">INTERIOR & TEXTURE</a></li>
-                                                <li><a href="#">PAINT ANCILLARY</a></li>
-                                                <li><a href="#">INTERIOR DESIGN</a></li>
-                                                <li><a href="#">WOOD COATINGS</a></li>
+                                                <li><a href="INTERIOR&TEXTURE.html">INTERIOR & TEXTURE</a></li>
+                                                <li><a href="PaintAncillary.html">PAINT ANCILLARY</a></li>
+                                                <li><a href="InteriorDesign.html">INTERIOR DESIGN</a></li>
+                                                <li><a href="WoodCoatings.html">WOOD COATINGS</a></li>
                                             </ul>
                                         </div>
                                     </div>
