--- a/PaintAncillary.html
+++ b/PaintAncillary.html
@@ -312,8 +312,7 @@
                                         <h2 class="ft__title">ABOUT</h2>
                                     </div>
                                     <div class="ft__details">
-                                        <p>On the other hand, we denounce with righteous indignation and dislike men who
-                                            are so beguiled demoralized On the other hand, we denounce </p>
+                                        <p>P & R GENRAL CONTRACTOR offers its customers everything they need to effortlessly plan and carry out projects more quickly than ever before floor plans, and site inspection. Included in its, architecture/design, precise cost estimates, interior design,, professional consultation </p>
                                     </div>
                                 </div>
                             </div>
