--- a/index.html
+++ b/index.html
@@ -309,16 +309,8 @@
                     <div class="col-md-4 col-lg-3 hidden-sm col-xs-12">
                         <div class="about foo">
                             <div class="about__inner">
-                                <h2><a href="about.html">OUR TASK</a></h2>
-                                <p>* Inspecting sites to select the best flooring solution <br>
-
-                                    * Removing and discarding existing flooring <br>
-
-                                    * Preparing the surface by clearing debris, dust and bolts <br>
-
-                                    * Verifying that flooring materials are secure and positioned well <br>
-
-                                    Educating clients on best practices to care for their new flooring <br></p>
+                                <h2><a href="about.html">OUR CERTIFICATE</a></h2>
+                                <img src="images/certificate-1.jpg" alt="" >
                                 <div class="about__btn">
                                     <a href="about.html">READ MORE</a>
                                 </div>
@@ -327,16 +319,8 @@
                                 </div>
                             </div>
                             <div class="about__inner about__hober__info">
-                                <h2><a href="about.html">OUR TASK</a></h2>
-                                <p>* Inspecting sites to select the best flooring solution <br>
-
-                                    * Removing and discarding existing flooring <br>
-
-                                    * Preparing the surface by clearing debris, dust and bolts <br>
-
-                                    * Verifying that flooring materials are secure and positioned well <br>
-
-                                    Educating clients on best practices to care for their new flooring <br></p>
+                                <h2><a href="about.html">OUR CERTIFICATE</a></h2>
+                                <img src="images/certificate-2.jpg" alt="">
                                 <div class="about__btn">
                                     <a href="about.html">READ MORE</a>
                                 </div>
@@ -536,6 +520,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <div class="project__itm foo">
                                         <div class="project__thumb">
@@ -804,7 +789,10 @@
                         <div class="reguest__quote">
                             <div class="section__title text-left">
                                 <h2 class="title__line">REQUEST A <span class="text--theme">QUOTE</span></h2>
-                                <p>Request a quote today to take the first step toward your dream project. Our team will provide a detailed and competitive estimate tailored to your needs. We ensure transparency and clarity in all our pricing. Let us help you turn your vision into reality with expert guidance and unbeatable value.</p>
+                                <p>Request a quote today to take the first step toward your dream project. Our team will
+                                    provide a detailed and competitive estimate tailored to your needs. We ensure
+                                    transparency and clarity in all our pricing. Let us help you turn your vision into
+                                    reality with expert guidance and unbeatable value.</p>
                             </div>
                             <form id="contact-form"
                                 action="https://d29u17ylf1ylz9.cloudfront.net/simply-construction/mail-faq.php"
@@ -918,7 +906,10 @@
                                         <h2 class="ft__title">ABOUT</h2>
                                     </div>
                                     <div class="ft__details">
-                                        <p>P & R GENRAL CONTRACTOR offers its customers everything they need to effortlessly plan and carry out projects more quickly than ever before floor plans, and site inspection. Included in its, architecture/design, precise cost estimates, interior design,, professional consultation</p>
+                                        <p>P & R GENRAL CONTRACTOR offers its customers everything they need to
+                                            effortlessly plan and carry out projects more quickly than ever before floor
+                                            plans, and site inspection. Included in its, architecture/design, precise
+                                            cost estimates, interior design,, professional consultation</p>
                                     </div>
                                 </div>
                             </div>
