--- a/index.html
+++ b/index.html
@@ -52,15 +52,7 @@
                                 <li><a href="#"><i class="fa fa-phone"></i>(+91) 9827068457</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-                            <div class="header__top__right">
-                                <ul class="login-register">
-                                    <li><a href="login-register.html">LOGIN</a></li>
-                                    <li class="separator">/</li>
-                                    <li><a href="login-register.html">REGISTER</a></li>
-                                </ul>
-                            </div>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
@@ -84,7 +76,7 @@
                                     </li>
                                     <li><a href="about.html">ABOUT</a></li>
                                     <li><a href="service.html">SERVICES</a></li>
-                                    <li class="drop"><a href="projects-one.html">PROJECTS</a>
+                                    <li class="drop"><a href="Paint.html">PAINTS</a>
                                     </li>
                                     <li><a href="contact.html">CONTACT</a></li>
                                 </ul>
@@ -96,7 +88,7 @@
                                         </li>
                                         <li><a href="about.html">ABOUT</a></li>
                                         <li><a href="service.html">SERVICES</a></li>
-                                        <li><a href="projects-one.html">PROJECTS</a>
+                                        <li><a href="Paint.html">PAINTS</a>
                                         </li>
                                         <li><a href="contact.html">contact</a></li>
                                     </ul>
@@ -923,13 +915,10 @@
                                     <div class="footer__link">
                                         <ul class="ft__menu">
                                             <li><a href="service.html">Services</a></li>
-                                            <li><a href="projects-one.html">Projects</a></li>
                                             <li><a href="#">Features</a></li>
 
                                         </ul>
                                         <ul class="ft__menu">
-
-                                            <li><a href="projects-one.html">Projects</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                             <li><a href="#">Quote</a></li>
                                         </ul>
