--- a/service.html
+++ b/service.html
@@ -55,15 +55,7 @@
                                 <li><a href="#"><i class="fa fa-phone"></i>(+91) 9827068457</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-                            <div class="header__top__right">
-                                <ul class="login-register">
-                                    <li><a href="login-register.html">LOGIN</a></li>
-                                    <li class="separator">/</li>
-                                    <li><a href="login-register.html">REGISTER</a></li>
-                                </ul>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -87,7 +79,7 @@
                                     </li>
                                     <li><a href="about.html">ABOUT</a></li>
                                     <li><a href="service.html">SERVICES</a></li>
-                                    <li class="drop"><a href="projects-one.html">PROJECTS</a>
+                                    <li class="drop"><a href="Paint.html">PAINTS</a>
                                     </li>
                                     <li><a href="contact.html">CONTACT</a></li>
                                 </ul>
@@ -99,7 +91,7 @@
                                         </li>
                                         <li><a href="about.html">ABOUT</a></li>
                                         <li><a href="service.html">SERVICES</a></li>
-                                        <li><a href="projects-one.html">PROJECTS</a>
+                                        <li><a href="Paint.html">PAINTS</a>
                                         </li>
                                         <li><a href="contact.html">contact</a></li>
                                     </ul>
@@ -432,7 +424,11 @@
                                 <div class="reguest__quote">
                                     <div class="section__title text-left">
                                         <h2 class="title__line">REQUEST A <span class="text--theme">QUOTE</span></h2>
-                                        <p>Request a quote today to take the first step toward your dream project. Our team will provide a detailed and competitive estimate tailored to your needs. We ensure transparency and clarity in all our pricing. Let us help you turn your vision into reality with expert guidance and unbeatable value.</p>
+                                        <p>Request a quote today to take the first step toward your dream project. Our
+                                            team will provide a detailed and competitive estimate tailored to your
+                                            needs. We ensure transparency and clarity in all our pricing. Let us help
+                                            you turn your vision into reality with expert guidance and unbeatable value.
+                                        </p>
                                     </div>
                                     <div class="clint__comment__form">
                                         <div class="single__cl__form">
@@ -524,7 +520,10 @@
                                         <h2 class="ft__title">ABOUT</h2>
                                     </div>
                                     <div class="ft__details">
-                                        <p>P & R GENRAL CONTRACTOR offers its customers everything they need to effortlessly plan and carry out projects more quickly than ever before floor plans, and site inspection. Included in its, architecture/design, precise cost estimates, interior design,, professional consultation </p>
+                                        <p>P & R GENRAL CONTRACTOR offers its customers everything they need to
+                                            effortlessly plan and carry out projects more quickly than ever before floor
+                                            plans, and site inspection. Included in its, architecture/design, precise
+                                            cost estimates, interior design,, professional consultation </p>
                                     </div>
                                 </div>
                             </div>
@@ -538,13 +537,10 @@
                                     <div class="footer__link">
                                         <ul class="ft__menu">
                                             <li><a href="service.html">Services</a></li>
-                                            <li><a href="projects-one.html">Projects</a></li>
                                             <li><a href="#">Features</a></li>
 
                                         </ul>
                                         <ul class="ft__menu">
-
-                                            <li><a href="projects-one.html">Projects</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                             <li><a href="#">Quote</a></li>
                                         </ul>
