--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                                 <div class="fact__details">
                                     <div class="funfact__count__inner">
                                         <div class="fact__count ">
-                                            <span class="count">598</span>
+                                            <span class="count">304</span>
                                         </div>
                                     </div>
                                     <div class="fact__title">
@@ -570,7 +570,7 @@
                                 <div class="fact__details">
                                     <div class="funfact__count__inner">
                                         <div class="fact__count ">
-                                            <span class="count">128</span>
+                                            <span class="count">528</span>
                                         </div>
                                     </div>
                                     <div class="fact__title">
@@ -584,7 +584,7 @@
                                 <div class="fact__details">
                                     <div class="funfact__count__inner">
                                         <div class="fact__count ">
-                                            <span class="count">339</span>
+                                            <span class="count">239</span>
                                         </div>
                                     </div>
                                     <div class="fact__title">
@@ -598,7 +598,7 @@
                                 <div class="fact__details">
                                     <div class="funfact__count__inner">
                                         <div class="fact__count ">
-                                            <span class="count">109</span>
+                                            <span class="count">39</span>
                                         </div>
                                     </div>
                                     <div class="fact__title">
@@ -666,7 +666,7 @@
                                 </div>
                                 <div class="team__details">
                                     <h2><a href="#"> Pankaj Kumar</a></h2>
-                                    <h4>KALVIN MOMEN</h4>
+                                    <h4>Chief Incharge</h4>
                                 </div>
                             </div>
                         </div>
